--- a/src/main/resources/assets/ctoiafm/lang/en_us.lang
+++ b/src/main/resources/assets/ctoiafm/lang/en_us.lang
@@ -1,2 +1,2 @@
-entity.IceGod.name=Hualti, Ice Goddess
-entity.FireGod.name=Zazeca, Fire Goddess
+entity.IceGod.name=Zazeca, Ice Goddess
+entity.FireGod.name=Hualti, Fire Goddess
